CORS: Use async XHR instead of sync for withCredentials

--- a/cors/credentials-flag.htm
+++ b/cors/credentials-flag.htm
@@ -18,72 +18,89 @@ var url = CROSSDOMAIN + 'resources/cors-cookie.php?ident='
  */
 // XXX Do some https tests here as well
 test(function () {
-    var id = new Date().getTime(),
-        client = new XMLHttpRequest()
-    client.open("GET", url + id, false)
-    client.send(null)
-    assert_equals(client.response, "NO_COOKIE");
+    var client = new XMLHttpRequest()
+    client.open('GET', CROSSDOMAIN, false)
+    assert_throws(null, function() { client.withCredentials = true; }, 'setting withCredentials')
+}, 'Setting withCredentials on a sync XHR object should throw')
 
-    client.open("GET", url + id, false)
+async_test(function () {
+    var id = new Date().getTime() + '_1',
+        client = new XMLHttpRequest()
+    client.open("GET", url + id, true)
+    client.onload = this.step_func(function() {
+        assert_equals(client.response, "NO_COOKIE")
+        client.open("GET", url + id, true)
+        client.onload = this.step_func(function() {
+            assert_equals(client.response, "NO_COOKIE")
+            this.done()
+        })
+        client.send(null)
+    })
     client.send(null)
-    assert_equals(client.response, "NO_COOKIE")
+
 }, "Don't send cookie by default");
 
-test(function () {
-    var id = new Date().getTime(),
+async_test(function () {
+    var id = new Date().getTime() + '_2',
         client = new XMLHttpRequest()
 
-    client.open("GET", url + id, false)
+    client.open("GET", url + id, true)
     client.withCredentials = true
-    client.send(null)
-    assert_equals(client.response, "NO_COOKIE");
+    client.onload = this.step_func(function() {
+        assert_equals(client.response, "NO_COOKIE");
 
-    /* We have cookie, but the browser shouldn't send */
-    client.open("GET", url + id, false)
-    client.withCredentials = false
-    client.send(null)
-    assert_equals(client.response, "NO_COOKIE")
+        /* We have cookie, but the browser shouldn't send */
+        client.open("GET", url + id, true)
+        client.withCredentials = false
+        client.onload = this.step_func(function() {
+            assert_equals(client.response, "NO_COOKIE")
 
-    /* Reads and deletes the cookie */
-    client.open("GET", url + id, false)
-    client.withCredentials = true
+            /* Reads and deletes the cookie */
+            client.open("GET", url + id, true)
+            client.withCredentials = true
+            client.onload = this.step_func(function() {
+                assert_equals(client.response, "COOKIE")
+                this.done()
+            })
+            client.send(null)
+        })
+        client.send(null)
+    })
     client.send(null)
-    assert_equals(client.response, "COOKIE")
 }, "Don't send cookie part 2");
 
-test(function () {
-    var id = new Date().getTime(),
+async_test(function () {
+    var id = new Date().getTime() + '_3',
         client = new XMLHttpRequest()
 
     /* Shouldn't set the response cookie */
-    client.open("GET", url + id, false)
+    client.open("GET", url + id, true)
     client.withCredentials = false
-    client.send(null)
-    assert_equals(client.response, "NO_COOKIE");
+    client.onload = this.step_func(function() {
+        console.log(client.response + '_', client.response)
+        assert_equals(client.response, "NO_COOKIE", "first");
 
-    /* Sets the cookie */
-    client.open("GET", url + id, false)
-    client.withCredentials = true
-    client.send(null)
-    assert_equals(client.response, "NO_COOKIE")
+        /* Sets the cookie */
+        client.open("GET", url + id, true)
+        client.withCredentials = true
+        client.onload = this.step_func(function() {
+            assert_equals(client.response, "NO_COOKIE", "second")
 
-    /* Reads and deletes the cookie */
-    client.open("GET", url + id, false)
-    client.withCredentials = true
+            /* Reads and deletes the cookie */
+            client.open("GET", url + id, true)
+            client.withCredentials = true
+            client.onload = this.step_func(function() {
+                assert_equals(client.response, "COOKIE", "third")
+                this.done()
+            })
+            client.send(null)
+        })
+        client.send(null)
+    })
     client.send(null)
-    assert_equals(client.response, "COOKIE")
 }, "Don't obey Set-Cookie when withCredentials=false");
 
 function test_response_header(allow) {
-    test(function () {
-        var client = new XMLHttpRequest()
-        client.open('GET',
-            CROSSDOMAIN + 'resources/cors-makeheader.php?credentials=' + allow,
-            false)
-        client.withCredentials = true;
-        assert_throws(null, function() { client.send() }, 'send')
-    }, 'Access-Control-Allow-Credentials: ' + allow + ' should be disallowed (sync)')
-
     var resp_test = async_test('Access-Control-Allow-Credentials: ' + allow + ' should be disallowed (async)')
     resp_test.step(function() {
         var client = new XMLHttpRequest()
