--- a/cors/status-async.htm
+++ b/cors/status-async.htm
@@ -63,7 +63,7 @@ function statusRequest2(method, code, expect_code, nonsimple) {
             client.setRequestHeader('x-nonsimple', true)
 
         client.onreadystatechange = this.step_func(function() {
-            if (client.readyState < client.HEADERS_RECIEVED)
+            if (client.readyState < client.HEADERS_RECEIVED)
                 return
             assert_equals(client.response, "", "response data")
             assert_equals(client.status, expect_code, "response status")
