--- a/DOMEvents/throwing-in-listener-and-window-error-event.html
+++ b/DOMEvents/throwing-in-listener-and-window-error-event.html
@@ -12,9 +12,9 @@
 
     var errorEvent = false;
 
-    window.addEventListener('error', function(e){
+    window.onerror = function(e) {
         errorEvent = e;
-    });
+    }
 
     document.addEventListener('DOMContentLoaded', function(){
         var element = document.getElementById('bim');
