Use assert_equals for better error messages.

--- a/DOMEvents/throwing-in-listener-and-window-error-event.html
+++ b/DOMEvents/throwing-in-listener-and-window-error-event.html
@@ -25,7 +25,7 @@
 
         element.click();
 
-        assert_true(typeof errorEvent === 'object');
+        assert_equals(typeof errorEvent, 'object');
         t.done();
     });
 </script>
