Updated test to <command> -> <menuitem>.

--- a/xhtml/assertions/invalid/001.xhtml
+++ b/xhtml/assertions/invalid/001.xhtml
@@ -4,10 +4,10 @@
 </head>
 <body>
   <menu id='foo'>
-    <li><command id='com' label='The Command'></command></li>
+    <menuitem id='com' label='The Command'/>
   </menu>
   <menu xml:id='bar'>
-    <li><command id='com2' label='The Command'></command></li>
+    <menuitem id='com2' label='The Command'/>
   </menu>
   <p contextmenu='baz'>foo</p>
 </body>
