--- a/xhtml/assertions/valid/001.xhtml
+++ b/xhtml/assertions/valid/001.xhtml
@@ -4,16 +4,16 @@
 </head>
 <body>
   <menu id='foo'>
-    <li><command id='com' label='The Command'></command></li>
+    <menuitem id='com' label='The Command'/>
   </menu>
   <menu xml:id='bar'>
-    <li><command id='com2' label='The Command'></command></li>
+    <menuitem id='com2' label='The Command'/>
   </menu>
   <menu id='foo2'>
-    <li><command id='com3' label='The Command'></command></li>
+    <menuitem id='com3' label='The Command'/>
   </menu>
   <menu xml:id='bar2'>
-    <li><command id='com4' label='The Command'></command></li>
+    <menuitem id='com4' label='The Command'/>
   </menu>
   <p contextmenu='foo'>foo</p>
   <p contextmenu='bar'>bar</p>
