Fix pointerdown test to use correct ES DOMString binding

--- a/pointerevents/pointerdown.html
+++ b/pointerevents/pointerdown.html
@@ -36,7 +36,7 @@
 			["readonly", "float", "pressure"],
 			["readonly", "long", "tiltX"],
 			["readonly", "long", "tiltY"],
-			["readonly", "DOMString", "pointerType"],
+			["readonly", "string", "pointerType"],
 			["readonly", "boolean", "isPrimary"]
 		].forEach(function(attr) {
 			var readonly = attr[0];
