misc updates to tests

--- a/contributors/adobe/incoming/css3-regions/multicolumn/regions-multicol-011.html
+++ b/contributors/adobe/incoming/css3-regions/multicolumn/regions-multicol-011.html
@@ -24,7 +24,7 @@
             height: 100px;
             background: green;
         }
-        #named-flow-child-2, .named-flow-child-3 {
+        #named-flow-child-2, #named-flow-child-3 {
             width: 100px;
             height: 200px;
             background: green;
