--- a/contributors/adobe/incoming/css3-regions/multicolumn/regions-multicol-021.html
+++ b/contributors/adobe/incoming/css3-regions/multicolumn/regions-multicol-021.html
@@ -2,19 +2,19 @@
 <html>
 <head>
     <title>CSS Test: Multiple named flows with multicolumn layout with
-                     specified width, non-text content + multiple 
+                     unspecified width, non-text content + multiple 
                      overlapping regions</title>
     <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com"/>
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#multi-column-regions"/>
     <link rel="help" href="http://www.w3.org/TR/css3-multicol/#columns"/>
     <link rel="match" href="reference/regions-multicol-019-ref.html"/>
-    <meta name="assert" content="This test checks multiple named flows with non-text
-                                 content flow into multiple overlapping regions keeping
+    <meta name="assert" content="This test checks multiple named flows with
+                                 unspecified width and non-text content flow 
+                                 into multiple overlapping regions keeping
                                  the multicolumn layout that is applied to the 
                                  named flows."/>
     <style type="text/css">
         .named-flow-multicol {
-            width: 150px;
             -webkit-columns: 2;
             -webkit-column-gap: 50px;
         }
