--- a/contributors/adobe/incoming/css3-regions/multicolumn/regions-multicol-016.html
+++ b/contributors/adobe/incoming/css3-regions/multicolumn/regions-multicol-016.html
@@ -6,17 +6,18 @@
 <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com"/>
 <link rel="help" href="http://www.w3.org/TR/css3-regions/#multi-column-regions"/>
 <link rel="help" href="http://www.w3.org/TR/css3-multicol/#columns"/>
-    <link rel="match" href="reference/regions-multicol-013-ref.html"/>
+    <link rel="match" href="reference/regions-multicol-016-ref.html"/>
     <meta name="assert" content="This test checks that monolithic content 
                                  flows through multiple regions keeping 
                                  the multicolumn layout that is applied to the 
                                  named flow and that it overflows the last 
-                                 region in the region chain visibly."/>
+                                 region in the region chain visibly into
+                                 a fifth column."/>
     <style type="text/css">
         #named-flow-multicol {
             background-color: green;
             width: 50px;
-            height: 800px;
+            height: 900px;
             -webkit-columns: 2;
             -webkit-column-gap: 10px;
             -webkit-flow-into: multicol;
@@ -24,7 +25,7 @@
         }
         #region-1 , #region-2 {
             position: absolute;
-            top: 50px;
+            top: 75px;
             width: 110px;
             -webkit-flow-from: multicol;
         }
@@ -34,14 +35,17 @@
         }
         #region-2 {
             left: 140px;
+            height: 200px;
         }
         .failure {
             position: absolute;
             background-color: red;
-            top: 50px;
+            top: 75px;
             width: 50px;
-            height: 200px;
             z-index: -1;
+        }
+        #bar-1, #bar-2, #bar-3, #bar-4 {
+            height: 200px;
         }
         #bar-1 {
             left: 20px;
@@ -55,10 +59,15 @@
         #bar-4 {
             left: 200px;
         }
+        #square {
+            left: 260px;
+            height: 50px;
+        }
     </style>
 </head>
 <body>
-        <p>The test passes if there are four green vertical bars and no red.</p>
+        <p>The test passes if there are four green vertical bars, plus one
+           small green square to their right and no red.</p>
         <div id="named-flow-multicol"></div>
         <div id="region-1"></div>
         <div id="region-2"></div>
@@ -66,5 +75,6 @@
         <div class="failure" id="bar-2"></div>
         <div class="failure" id="bar-3"></div>
         <div class="failure" id="bar-4"></div>
+        <div class="failure" id="square"></div>
 </body>
 </html>
