Updated the info about testcases.

--- a/contributors/ttwf_shanghai/css3-transforms/youyi/submitted/css-transform-3d-rotate3d-X-negative.html
+++ b/contributors/ttwf_shanghai/css3-transforms/youyi/submitted/css-transform-3d-rotate3d-X-negative.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset='utf-8'>
     <title>CSS Transforms Test: rotate3d on div element</title>
-    <link rel="author" title="You Yi" href="yi.you@intel.com">
+    <link rel="author" title="Intel" href="http://www.intel.com">
     <link rel='help' href='http://www.w3.org/TR/2012/WD-css3-transforms-20120911/#rotate3d-function'>
     <meta name='flags' content='dom'>
     <link rel="match" href="reference/css-transform-3d-rotateX-ref.html">
