--- a/contributors/ttwf_shanghai/css3-transforms/youyi/submitted/css-transform-3d-transform-style.html
+++ b/contributors/ttwf_shanghai/css3-transforms/youyi/submitted/css-transform-3d-transform-style.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>CSS Transforms Test: rotateY with transform-style on nested elements</title>
-    <link rel="author" title="You Yi" href="yi.you@intel.com">
+    <link rel="author" title="Intel" href="http://www.intel.com">
     <link rel="help" href="http://www.w3.org/TR/2012/WD-css3-transforms-20120911/#rotateY-function">
     <link rel="help" href="http://www.w3.org/TR/css3-transforms/#transform-style-property">
     <link rel="match" href="reference/css-transform-3d-transform-style-ref.html">
