--- a/contributors/ttwf_shanghai/css3-transforms/youyi/submitted/css-transform-validation.html
+++ b/contributors/ttwf_shanghai/css3-transforms/youyi/submitted/css-transform-validation.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>CSS Transforms Test: property</title>
-    <link rel="author" title="You Yi" href="yi.you@intel.com">
+    <link rel="author" title="Intel" href="http://www.intel.com">
     <link rel="help" href="http://www.w3.org/TR/css3-transforms/#transform-property">
     <script src="/resources/testharness.js"></script>
     <script src="/resources/testharnessreport.js"></script>
