--- a/animation-timing/idlharness.html
+++ b/animation-timing/idlharness.html
@@ -42,7 +42,7 @@
         idl_array.add_untested_idls(document.getElementById("untested_idl").textContent);
         idl_array.add_idls(document.getElementById("idl").textContent);
 
-        idl_array.add_objects({WindowAnimationTiming: ["window"]});
+        idl_array.add_objects({Window: ["window"]});
 
         idl_array.test();
       })();
