--- a/contributors/ttwf_shanghai/css3-background/XieBing/submitted/css3-background-clip.html
+++ b/contributors/ttwf_shanghai/css3-background/XieBing/submitted/css3-background-clip.html
@@ -5,7 +5,7 @@
   <title>CSS Background-clip Test: the background is pruned to content box</title>
   <link rel="author" title="Xie Bing" href="mailto:451887565@qq.com">
   <link rel="reviewer" title="Dayang Shen" href="mailto:shendayang@baidu.com"> <!-- 2013-09-03 -->
-  <link rel="help" href="http://www.w3.org/TR/2012/CR-css3-background-20120724/#the-border-width">
+  <link rel="help" href="http://www.w3.org/TR/css3-background/#the-border-width">
   <link rel="match" href="reference/css3-background-clip-ref.html"/>
   <style type="text/css">
     div{
