fixed spec link

--- a/contributors/ttwf_shanghai/css3-background/YueHu/submitted/css3-background-size-contain.html
+++ b/contributors/ttwf_shanghai/css3-background/YueHu/submitted/css3-background-size-contain.html
@@ -5,7 +5,7 @@
   <title>CSS3 background-size:contain</title>
   <link rel="author" title="Yue Hu" href="mailto:miniwade514@gmail.com" />
   <link rel="reviewer" title="Dayang Shen" href="mailto:shendayang@baidu.com" /> <!-- 2013-09-03 -->
-  <link rel="help" href="http://dev.w3.org/csswg/css-backgrounds/#the-background-size" />
+  <link rel="help" href="http://www.w3.org/TR/css3-background/#the-background-size" />
   <link rel="match" href="reference/css3-background-size-contain-ref.html">
   <style>
     div {
