Remove <base> elements

--- a/html/semantics/embedded-content-0/media-elements/loading-the-media-resource/011.html
+++ b/html/semantics/embedded-content-0/media-elements/loading-the-media-resource/011.html
@@ -1,4 +1,4 @@
-<!doctype html><base href=http://w3c-test.org>
+<!doctype html>
 <title>invoking load by setting src when networkState is not NETWORK_EMPTY</title>
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
