--- a/html/semantics/embedded-content-0/media-elements/loading-the-media-resource/009.html
+++ b/html/semantics/embedded-content-0/media-elements/loading-the-media-resource/009.html
@@ -1,4 +1,4 @@
-<!doctype html><base href=http://w3c-test.org>
+<!doctype html>
 <title>NOT invoking load by setting src in the wrong namespace</title>
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
