--- a/html/semantics/embedded-content-0/media-elements/loading-the-media-resource/010.html
+++ b/html/semantics/embedded-content-0/media-elements/loading-the-media-resource/010.html
@@ -1,4 +1,4 @@
-<!doctype html><base href=http://w3c-test.org>
+<!doctype html>
 <title>invoking load by setting src on video not in a document</title>
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
