--- a/html/semantics/embedded-content-0/media-elements/loading-the-media-resource/028.html
+++ b/html/semantics/embedded-content-0/media-elements/loading-the-media-resource/028.html
@@ -1,4 +1,4 @@
-<!doctype html><base href=http://w3c-test.org>
+<!doctype html>
 <title>pointer updates (control test)</title>
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
