tests for Meter Element created

--- a/html/semantics/forms/the-meter-element/meter.html
+++ b/html/semantics/forms/the-meter-element/meter.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>Input Range</title>
+    <title>Meter Element/title>
     <meta name="viewport" content="width=device-width, maximum-scale=1.0, user-scalable=no" />
     <link rel="author" title="Tomoyuki SHIMIZU" href="mailto:tomoyuki.labs@gmail.com">
     <link rel="help" href="http://www.w3.org/TR/html5/forms.html#the-meter-element">
@@ -12,7 +12,7 @@
 
   <body>
 
-    <h1>Input Range</h1>
+    <h1>Meter Element</h1>
     <div id="log">
     </div>
 
