--- a/html/semantics/forms/the-meter-element/meter.html
+++ b/html/semantics/forms/the-meter-element/meter.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>Meter Element/title>
+    <title>Meter Element</title>
     <meta name="viewport" content="width=device-width, maximum-scale=1.0, user-scalable=no" />
     <link rel="author" title="Tomoyuki SHIMIZU" href="mailto:tomoyuki.labs@gmail.com">
     <link rel="help" href="http://www.w3.org/TR/html5/forms.html#the-meter-element">
