--- a/websockets/constructor/002.html
+++ b/websockets/constructor/002.html
@@ -5,14 +5,16 @@
 <script src=../constants.js></script>
 <div id=log></div>
 <script>
+var domain = SCHEME_DOMAIN_PORT.split('://')[1];
+
 test(function() {assert_throws("SyntaxError", function(){new WebSocket("/test")})});
 test(function() {assert_throws("SyntaxError", function(){new WebSocket("ws://foo bar.com/")})});
 test(function() {assert_throws("SyntaxError", function(){new WebSocket("wss://foo bar.com/")})});
-test(function() {assert_throws("SyntaxError", function(){new WebSocket("http://"+location.hostname+"/")})});
+test(function() {assert_throws("SyntaxError", function(){new WebSocket("http://"+domain+"/")})});
 test(function() {assert_throws("SyntaxError", function(){new WebSocket("mailto:example@example.org")})});
 test(function() {assert_throws("SyntaxError", function(){new WebSocket("about:blank")})});
-test(function() {assert_throws("SyntaxError", function(){new WebSocket("ws://"+location.hostname+"/#")})});
-test(function() {assert_throws("SyntaxError", function(){new WebSocket("ws://"+location.hostname+"/#test")})});
+test(function() {assert_throws("SyntaxError", function(){new WebSocket("ws://"+domain+"/#")})});
+test(function() {assert_throws("SyntaxError", function(){new WebSocket("ws://"+domain+"/#test")})});
 test(function() {assert_throws("SyntaxError", function(){new WebSocket("?test")})});
 test(function() {assert_throws("SyntaxError", function(){new WebSocket("#test")})});
 </script>
