--- a/websockets/constructor/007.html
+++ b/websockets/constructor/007.html
@@ -5,5 +5,6 @@
 <script src=../constants.js></script>
 <div id=log></div>
 <script>
-test(function() {assert_throws("SyntaxError", function(){new WebSocket("ws://"+location.hostname+"/", 'a'+String.fromCharCode(0)+'b')})});
+var domain = SCHEME_DOMAIN_PORT.split('://')[1];
+test(function() {assert_throws("SyntaxError", function(){new WebSocket("ws://"+domain+"/", 'a'+String.fromCharCode(0)+'b')})});
 </script>
